--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+VITE_API_KEY=your-api-key
 VITE_AUTH_DOMAIN=your-auth-domain
 VITE_PROJECT_ID=your-project-id
 VITE_STORAGE_BUCKET=your-storage-bucket
